# decoden

./: .gitignore  README.md  pyproject.toml  run.py  run_decoden.py  run_decoden_replicates.py  run_decoden_sharing.py  run_preprocess.py
decoden/: __main__.py  constants.py  decoden_pipeline.py  functions.py  main.py  pipeline.py  preprocessing.py  utils.py
decoden/apps/: denoise_app.py  run_app.py
decoden/denoising/: hsr.py  nmf.py  peak_consolidation.py
decoden/detection/: peak_detection.py
decoden/preprocessing/: binning.py  logger.py  macs_steps.py  pipeline.py  pipeline_old.py  preprocess_steps.py
preprocess/: logger.py  macs_steps.py
py/: preprocess.py  tile.py
tests/: conftest.py  test_denoising.py  test_peak_detection.py  test_pipeline.py  test_preprocessing.py
tests/sample_data/: samples.csv  samples_added_cols.csv
tests/sample_data/output_directory/: chrom_sizes.bed
utils/: message.txt  samples.csv
