[tool.poetry]
name = "decoden"
version = "0.1.0"
description = "Deconvolve and Denoise: remove ChIP-seq biases with a causality-based model"
authors = ["Giovanni Visona <giovanni.visona@tuebingen.mpg.de>",
           "Tanmayee Narendra <tanmayee.narendra@uni-tuebingen.de>"]
readme = "README.md"

[tool.poetry.scripts]
decoden = "decoden.__main__:app"

[tool.poetry.dependencies]
python = "^3.9"
joblib = "^1.2.0"
numpy = "^1.24.2"
pandas = "^2.0.0"
tqdm = "^4.66.3"
scikit-learn = "^1.2.2"
typer = {extras = ["all"], version = "^0.7.0"}
MACS2 = "^2.2.6"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pyarrow = "^14.0.1"
deeptools = "^3.5"
statsmodels = "^0.14"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
